package structural.decorator.image;

public interface ImageProcess {
    void process();
}
